...
                .padding(horizontal = 8.dp),
            verticalAlignment = Alignment.CenterVertically,
            horizontalArrangement = Arrangement.SpaceBetween
        ) {
            SearchBar(modifier = Modifier.weight(1f))
            Spacer(modifier = Modifier.width(8.dp))
            AddAlbumButton(navController = navController)
        }
        Spacer(modifier = Modifier.height(8.dp))

        // Lista de álbumes
        LazyVerticalGrid(
            columns = GridCells.Fixed(2),
...

            Text(text = "$currentPage", color = Color.White)

            IconButton(
                onClick = { viewModel.nextPage() },
                enabled = isNextEnabled,
                modifier = Modifier.testTag("boton_siguiente")
            ) {
                Icon(
                    imageVector = Icons.Filled.ArrowForward,
                    contentDescription = "Siguiente página",
                    tint = Color.White
                )
...
